compiler/test-data/parser/errors/theme/unclosed_brace.frel
module test

theme AppTheme {
    padding : u32 = 16
